add_executable(filetransfer_download download.cc)
target_link_libraries(filetransfer_download xnet_net)

add_executable(filetransfer_download2 download2.cc)
target_link_libraries(filetransfer_download2 xnet_net)

add_executable(filetransfer_download3 download3.cc)
target_link_libraries(filetransfer_download3 xnet_net)

