add_executable(asio_chat_client client.cc)
target_link_libraries(asio_chat_client xnet_net)

add_executable(asio_chat_loadtest loadtest.cc)
target_link_libraries(asio_chat_loadtest xnet_net)

add_executable(asio_chat_server server.cc)
target_link_libraries(asio_chat_server xnet_net)

add_executable(asio_chat_server_threaded server_threaded.cc)
target_link_libraries(asio_chat_server_threaded xnet_net)

add_executable(asio_chat_server_threaded_efficient server_threaded_efficient.cc)
target_link_libraries(asio_chat_server_threaded_efficient xnet_net)

add_executable(asio_chat_server_threaded_highperformance server_threaded_highperformance.cc)
target_link_libraries(asio_chat_server_threaded_highperformance xnet_net)

